--- a/GenTree/GenTree.Android/GenTree.Android.csproj
+++ b/GenTree/GenTree.Android/GenTree.Android.csproj
@@ -122,5 +122,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xxxhdpi\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\person.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
