--- a/GenTree/GenTree.Android/GenTree.Android.csproj
+++ b/GenTree/GenTree.Android/GenTree.Android.csproj
@@ -133,7 +133,7 @@
     <AndroidResource Include="Resources\drawable\person.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\splashscreen.png" />
+    <AndroidResource Include="Resources\drawable\splashscreen.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
